| Bug #17087 | No warning on cluster failure for IS.FILES | ||
|---|---|---|---|
| Submitted: | 3 Feb 2006 2:31 | Modified: | 14 Feb 2006 10:25 |
| Reporter: | Stewart Smith | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S1 (Critical) |
| Version: | 5.1.6 | OS: | |
| Assigned to: | Tomas Ulin | Target Version: | |
[3 Feb 2006 2:31]
Stewart Smith
[3 Feb 2006 10:22]
Tomas Ulin
also verify how mysqldump behaves in this case since it uses the IS
[7 Feb 2006 11:21]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/2227
[7 Feb 2006 12:24]
Tomas Ulin
pushed to 5.1.7
[14 Feb 2006 10:25]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented fix as feature change in 5.1.7 changelog. Bug closed.
