Bug #17087  	No warning on cluster failure for IS.FILES